<resources>
    <string name="app_name">Sportify</string>

    <string name="spotify_head">Sportify</string>

    <string name="spotify_li">+Live Social Media about Sports</string>

    <string name="choose_team">Choose Your Team </string>
    <string name="be_supporters"> and Be Supporters!</string>
    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="community">Community</string>
    <string name="calendar">Calendar</string>
    <string name="gps">GPS</string>
    <string name="account">Account</string>

    <!-- Comment -->
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="follow_cancel">UNFOLLOW</string>
    <string name="follow">FOLLOW</string>

    <!-- Alarm -->
    <string name="alarm_favorite"> just liked your post!</string>
    <string name="alarm_comment"> left a message</string>
    <string name="alarm_follow"> has started to follow your account!</string>


</resources>